test/sema/typeck/pattern/lit-int-wrong-type.out
error: Bool expected but got type Int64.
--> lit-int-wrong-type.dora:2:14
 | fn f(x: (String, Bool)) {
 |     let (_y, 2) = x;
                ~
 | }
 | 
1 error found.
