test/sema/typeck/pattern/lit-int-wrong-type.dora
fn f(x: (String, Bool)) {
    let (_y, 2) = x;
}
